--- a/files/css/ef.css
+++ b/files/css/ef.css
@@ -270,6 +270,7 @@ body {
 	margin-right:1px;
 	margin-left:2px;
 	width:39px;
+	padding-left:2px;
 }
 
 button {
@@ -308,6 +309,7 @@ button {
 	width:38px;
 	margin-left:1px;
 	margin-right:10px;
+	padding-left:2px;
 }
 
 input {
